frontend/src/App.css
#root {
  margin: 0 auto;
  padding: 0 1rem;
  text-align: center;
}

nav {
  display: flex;
  justify-content: center;
  column-gap: 20px;

  a {
    text-decoration: none;
    padding: 12px 20px;
    background-color: white;
    color: #333;
    border: 1px solid #ddd;
    border-radius: 8px;
    cursor: pointer;
    display: inline-flex;
    align-items: center;
    gap: 10px;
    font-weight: 600;
    transition: 0.2s;

    &.active {
      background-color: #0062cc;
      color: white;
    }
  }
}

